[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/instructions/instructions_2.png" type="Texture" id=1]
[ext_resource path="res://ui/instructions/instructions_4.png" type="Texture" id=2]
[ext_resource path="res://ui/instructions/instructions_1.png" type="Texture" id=3]
[ext_resource path="res://ui/instructions/instructions_3.png" type="Texture" id=4]
[ext_resource path="res://ui/instructions/instructions_2_2.png" type="Texture" id=5]
[ext_resource path="res://ui/instructions/instructions_2_1.png" type="Texture" id=6]
[ext_resource path="res://ui/instructions/instructions_2_3.png" type="Texture" id=7]
[ext_resource path="res://ui/instructions/instructions.gd" type="Script" id=8]
[ext_resource path="res://ui/instructions/instructions_3_1.png" type="Texture" id=9]
[ext_resource path="res://ui/instructions/instructions_3_2.png" type="Texture" id=10]
[ext_resource path="res://ui/instructions/instructions_3_4.png" type="Texture" id=11]
[ext_resource path="res://ui/instructions/instructions_3_3.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 2
playing = true
centered = false

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
playing = true
centered = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
